TestSuite/errors/err0250.pas
type
  t1 = class 
    
    constructor := exit;
    
    procedure p1(a: array of record end) := exit;
    
  end;

begin end.